Update Jenkinsfile to previous

--- a/java-tomcat-sample/Jenkinsfile
+++ b/java-tomcat-sample/Jenkinsfile
@@ -1,31 +1,43 @@
 pipeline {
     agent any
-    stages {
-        stage('Build Application') {
-            steps {
+    stages 
+    {
+        stage('Build Application') 
+        {
+            steps 
+            {
                 sh 'mvn -f java-tomcat-sample/pom.xml clean package'
             }
-            post {
-                success {
+            post 
+            {
+                success 
+                {
                     echo "Now Archiving the Artifacts...."
                     archiveArtifacts artifacts: '**/*.war'
                 }
             }
         }
-        stage('Deploy in Staging Environment'){
-            steps{
-                build job: 'Deploy_Application_Staging_Env'
+        /*
+        stage('Deploy in Staging Environment')
+        {
+            steps
+            {
+                build job: 'Deploy Application to Staging Environment'
 
             }
             
         }
-        stage('Deploy to Production'){
-            steps{
-                timeout(time:5, unit:'DAYS'){
+        stage('Deploy to Production')
+        {
+            steps
+            {
+                timeout(time:5, unit:'DAYS')
+                {
                     input message:'Approve PRODUCTION Deployment?'
                 }
-                build job: 'Deploy_Application_Prod_Env'
+                build job: 'Deploy Application to Prod Environment'
             }
         }
+        */
     }
 }
