--- a/java-tomcat-sample/Jenkinsfile
+++ b/java-tomcat-sample/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
         {
             steps
             {
-                build job: 'Deploy Application to staging evironment'
+                build job: 'Deploy Application to Staging Environment'
             }
             
         }
